# OtiLLM

./: .gitignore  CITATION.cff  LICENSE  README.md  RESEARCH.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: tests.yml
benchmarks/: README.md
benchmarks/configs/: jair_eval.yaml
docs/: architecture.md  benchmarks.md  explainability.md  governance.md  memory.md  reproducibility.md  retrieval.md
examples/: errg_example.py  quick_start.py  quickstart.py  rag_assistant.py  retrieval_reconsideration_example.py
experiments/jair_v2/: README.md  plot_jair_results.py  prepare_jair_datasets.py  run_jair_experiments.py  run_jair_stress_tests.py  statistical_validation.py
notebooks/: 01_governed_runtime_example.md  02_retrieval_reconsideration.md  03_errg_explainability.md  04_stress_testing.md  05_governed_memory.md
otillm/: __init__.py  config.py  runtime.py  types.py
otillm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
otillm/core/: __init__.py  generator.py  memory_engine.py  orchestrator.py  policy_engine.py
otillm/evidence/: __init__.py  fabric.py  fusion.py  retrieval.py  store.py
otillm/explainability/: __init__.py  errg.py  tracing.py
otillm/governance/: __init__.py  policy_engine.py  risk.py
otillm/memory/: __init__.py  governed_memory.py
otillm/multimodal/: __init__.py  adapters.py  perception.py
otillm/orchestration/: __init__.py  router.py
otillm/retrieval/: __init__.py  contradiction.py  reconsideration.py  reformulation.py
otillm/runtime/: __init__.py  runtime.py  state.py  uncertainty.py  utility.py
otillm/utils/: __init__.py  text.py
paper/: README.md
results/: README.md
supplementary/: README.md
tests/: test_evidence.py  test_explainability.py  test_governance.py  test_memory.py  test_multimodal.py  test_policy.py  test_retrieval.py  test_runtime.py
