[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "otillm"
version = "0.1.0"
description = "OtiLLM 0.1.0: Evidence-native, policy-aware AI runtime for reliable AI systems"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Oti Edema" }
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0"
]

[project.urls]
Homepage = "https://github.com/OtiEdema/OtiLLM"
Repository = "https://github.com/OtiEdema/OtiLLM"
Issues = "https://github.com/OtiEdema/OtiLLM/issues"
PyPI = "https://pypi.org/project/otillm/"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
