[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "otillm"
version = "0.2.0"
description = "OtiLLM v2.4: A governed cognitive runtime for evidence-native, memory-augmented and explainable frontier AI systems."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Oti Edema"}
]
keywords = [
  "large-language-models",
  "retrieval-augmented-generation",
  "explainable-ai",
  "ai-governance",
  "runtime-orchestration",
  "trustworthy-ai"
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pyyaml>=6.0",
  "tqdm>=4.66"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "matplotlib>=3.8",
  "scipy>=1.11"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["otillm*"]
